# github-to-bitbucket-backup-repo-updater

./: .gitignore  .project  Makefile  README.md  app.js  app.test.js  config.json  license  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  readme.md
github_to_bitbucket_backup_repo_updater/scripts/: github_to_bitbucket_backup_repo_updater.py
tests/: test_users.py
