[tool.poetry]
name = "github-to-bitbucket-backup-repo-updater"
version = "0.3.0"
description = ""
authors = ["skip"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
flake8 = "^6.0.0"

[tool.poetry.scripts]
github-to-bitbucket-backup-repo-updater = "github_to_bitbucket_backup_repo_updater.scripts.github_to_bitbucket_backup_repo_updater:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
